<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.openmarkov</groupId>
        <artifactId>OpenMarkov</artifactId>
        <version>0.3.0-SNAPSHOT</version>
    </parent>
    <artifactId>gui</artifactId>
    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>inference</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>io</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>inference.des</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
</project>